--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,35 +1,49 @@
 {
-  "name": "chatbot-frontend",
+  "name": "frontend",
+  "main": "expo-router/entry",
   "version": "1.0.0",
-  "private": true,
-  "main": "index.js",
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint . --ext .ts,.tsx"
+    "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "lint": "expo lint"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "react": "18.2.0",
-    "react-native": "0.75.3",
-    "react-native-gesture-handler": "^2.17.1",
-    "react-native-reanimated": "^3.15.0",
-    "react-native-safe-area-context": "^4.10.2"
+    "@expo/vector-icons": "^15.0.3",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/native": "^7.1.8",
+    "axios": "^1.13.2",
+    "expo": "~54.0.23",
+    "expo-constants": "~18.0.10",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.10",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.14",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.9",
+    "react": "19.1.0",
+    "react-native": "^0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native/eslint-config": "^0.76.0",
-    "@tsconfig/react-native": "^3.0.3",
-    "@types/react": "^18.3.5",
-    "@types/react-test-renderer": "^18.3.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "metro-react-native-babel-transformer": "^0.77.0",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
-  }
+    "@types/axios": "^0.9.36",
+    "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
+  },
+  "private": true
 }
