--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,34 +1,24 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react-native",
+    "moduleResolution": "node",
     "target": "esnext",
     "module": "esnext",
-    "lib": ["esnext"],
-    "jsx": "react",
-    "moduleResolution": "node",
+    "strict": true,
     "allowJs": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "isolatedModules": true,
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "types": ["react", "react-native"],
-    "baseUrl": "./src",
-    "paths": {
-      "@components/*": ["components/*"],
-      "@screens/*": ["screens/*"],
-      "@hooks/*": ["hooks/*"],
-      "@api/*": ["api/*"],
-      "@utils/*": ["utils/*"],
-      "@types/*": ["types/*"]
-    }
+    "isolatedModules": true,
+    "lib": ["dom", "esnext"]
   },
-  "include": ["src/**/*"],
-  "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts"
   ]
 }
