--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,43 @@
 {
-  "name": "backend",
+  "name": "chatbot-backend",
   "version": "1.0.0",
-  "license": "MIT",
+  "description": "Rule-based chatbot backend with fuzzy search",
+  "main": "dist/server.js",
+  "type": "commonjs",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*' --exec ts-node src/server.ts",
-    "start": "ts-node src/server.ts",
-    "build": "tsc -p ."
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "verify-data": "ts-node scripts/verifyData.ts",
+    "create-data": "ts-node scripts/createSampleData.ts"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "body-parser": "^1.20.2",
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "mysql2": "^3.15.3",
-    "uuid": "^9.0.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fuse.js": "^6.6.2",
+    "mongoose": "^7.5.0",
+    "pino": "^10.1.0",
+    "uuid": "^8.3.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
-    "@types/uuid": "^9.0.6",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
-  }
+    "@types/express": "^4.17.25",
+    "@types/node": "^20.19.25",
+    "@types/uuid": "^10.0.0",
+    "pino-pretty": "^13.1.2",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
+  },
+  "keywords": [
+    "chatbot",
+    "nodejs",
+    "typescript",
+    "mongodb"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
