--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,49 +1,38 @@
 {
-  "name": "frontend",
-  "main": "expo-router/entry",
+  "name": "chatbot-frontend",
   "version": "1.0.0",
+  "private": true,
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
-    "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "axios": "^1.13.2",
-    "expo": "~54.0.23",
-    "expo-constants": "~18.0.10",
-    "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.14",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.9",
-    "react": "19.1.0",
-    "react-native": "^0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "expo": "~51.0.0",
+    "expo-constants": "~16.0.2",
+    "expo-router": "^3.4.0",
+    "expo-status-bar": "~1.12.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "^0.74.5",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "~0.19.10",
+    "tailwind-react-native-classnames": "^3.0.1",
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0",
-    "typescript": "~5.9.2"
-  },
-  "private": true
+    "@types/node": "^24.10.1",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "~0.72.3",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "typescript": "~5.3.3"
+  }
 }
