--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,7 +13,8 @@
     "allowSyntheticDefaultImports": true,
     "types": [
       "react",
-      "react-native"
+      "react-native",
+      "node"         // ✅ add this
     ],
     "isolatedModules": true,
     "lib": [
