--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "verify-data": "ts-node scripts/verifyData.ts",
-    "create-data": "ts-node scripts/createSampleData.ts"
+    "create-data": "ts-node scripts/createSampleData.ts",
+    "seed:chatbot": "ts-node scripts/seedChatbotData.ts"
   },
   "dependencies": {
     "axios": "^1.5.0",
