--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.19.10",
     "tailwind-react-native-classnames": "^3.0.1",
