--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "start": "cd frontend && npm run build:web && cd ../backend && npm run build && npm start",
+    "start:dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "start:backend": "cd backend && npm run dev",
     "start:frontend": "cd frontend && npx expo start",
     "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
